# openMeshPolyscope

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
data/: Bot_Shoulder.stl  Green_mamba_1FAS.stl  heartgear2.stl
